corrected the overflow of table in bussin.html

--- a/Frontend/common/bussin.css
+++ b/Frontend/common/bussin.css
@@ -109,12 +109,11 @@ input[type="text"],#busType,#seatCount,#time,#sourcePlace,#destinationPlace{
     padding: 10px;
 }
 .scrollingEffect{
-    border-collapse: collapse;
     text-align: left;
     padding: 20px;
-    margin: 0 auto;
-    width: 95%;
-    overflow: auto;
+    margin: 0px;
+    overflow-y: auto;
+    max-height: 325px;
 }
 
 table {
@@ -157,7 +156,6 @@ table {
     box-shadow: 0px 0px 5px #998787;
     display: block;
     background: white;
-    overflow: auto;
     padding-bottom: 50px;
 
 }
@@ -174,6 +172,9 @@ table {
 h1{
     margin: 0px;
     color: white;
+}
+h2{
+    margin: 0px;
 }
 .submitBtnDiv{
     display: flex;
